--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="pl">
 
 <head>
@@ -8,23 +8,28 @@
     <title>Odnawialne Źródła Energii (OZE)</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            background-color: #f5f5f5;
+            color: #2c3e50;
         }
 
         header {
-            background-color: #4CAF50;
+            background-color: #3498db;
             color: white;
             text-align: center;
-            padding: 20px;
+            padding: 40px 20px;
+            background-image: url('images/Oze2.jpg');
+            background-size: cover;
+            background-position: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         nav {
-            background-color: #333;
+            background-color: #2c3e50;
             overflow: hidden;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         nav a {
@@ -34,41 +39,100 @@
             text-align: center;
             padding: 14px 20px;
             text-decoration: none;
+            transition: background-color 0.3s, color 0.3s, transform 0.3s;
         }
 
         nav a:hover {
-            background-color: #ddd;
-            color: black;
+            background-color: #3498db;
+            color: white;
+            transform: perspective(1px) translateZ(0);
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
         }
 
         .container {
-            padding: 20px;
+            padding: 40px 20px;
+            max-width: 1200px;
+            margin: 0 auto;
         }
 
         h2 {
-            color: #4CAF50;
+            color: #3498db;
+            font-size: 2em;
+            margin-bottom: 20px;
         }
 
         .section {
-            margin-bottom: 20px;
+            margin-bottom: 40px;
+            background-size: cover;
+            background-position: center;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            background-color: white;
         }
 
         .image {
             width: 100%;
             height: auto;
             margin-top: 10px;
+            border-radius: 8px;
+        }
+
+        .wind-turbine {
+            width: 100px;
+            height: 100px;
+            background: url('images/wind-turbine.png') no-repeat center center;
+            background-size: contain;
+            animation: spin 4s linear infinite;
+        }
+
+        @keyframes spin {
+            from {
+                transform: rotate(0deg);
+            }
+            to {
+                transform: rotate(360deg);
+            }
         }
 
         footer {
             text-align: center;
-            background-color: #333;
+            background-color: #2c3e50;
             color: white;
-            padding: 10px;
+            padding: 20px;
             position: fixed;
             bottom: 0;
             width: 100%;
+            box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
         }
 
+        .tabs {
+            display: flex;
+            justify-content: space-around;
+            background-color: #2c3e50;
+            padding: 10px 0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .tabs a {
+            color: white;
+            text-decoration: none;
+            padding: 10px 20px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        .tabs a:hover {
+            background-color: #3498db;
+            color: white;
+        }
+
+        .header-image {
+            width: 100%;
+            height: auto;
+            max-height: 400px;
+            object-fit: cover;
+            border-radius: 8px;
+        }
     </style>
 </head>
 
@@ -79,36 +143,63 @@
         <p>Przyszłość energii: Czysta i zrównoważona energia dla lepszego jutra</p>
     </header>
 
-    <nav>
-        <a href="#solar">Energia słoneczna</a>
-        <a href="#wind">Energia wiatrowa</a>
-        <a href="#hydro">Energia wodna</a>
-        <a href="#geothermal">Energia geotermalna</a>
+    <nav class="tabs">
+        <a href="solar.html">Energia słoneczna</a>
+        <a href="wind.html">Energia wiatrowa</a>
+        <a href="hydro.html">Energia wodna</a>
+        <a href="geothermal.html">Energia geotermalna</a>
+        <a href="biomass.html">Energia biomasy</a>
+        <a href="ocean.html">Energia oceaniczna</a>
     </nav>
 
     <div class="container">
+        <img src="images/Oze4.jpg" alt="Odnawialne Źródła Energii" class="header-image">
         <section id="solar" class="section">
             <h2>Energia Słoneczna</h2>
             <p>Energia słoneczna jest jednym z najbardziej powszechnych i czystych źródeł energii. Dzięki panelom słonecznym możliwe jest pozyskiwanie energii bezpośrednio z promieniowania słonecznego.</p>
-            <img src="https://via.placeholder.com/800x400?text=Energia+S%C5%82oneczna" alt="Panele słoneczne" class="image">
+            <img src="images/Oze3.jpg" alt="Panele słoneczne" class="image">
         </section>
 
         <section id="wind" class="section">
             <h2>Energia Wiatrowa</h2>
             <p>Energia wiatrowa wykorzystuje ruch powietrza do produkcji energii elektrycznej za pomocą turbin wiatrowych. Jest to jedno z najbardziej rozwiniętych źródeł odnawialnych.</p>
-            <img src="https://via.placeholder.com/800x400?text=Energia+Wiatrowa" alt="Turbiny wiatrowe" class="image">
+            <div class="wind-turbine"></div>
         </section>
 
         <section id="hydro" class="section">
             <h2>Energia Wodna</h2>
             <p>Energia wodna pochodzi z przepływających wód, które mogą napędzać turbiny w elektrowniach wodnych. Jest to jedno z najstarszych źródeł energii odnawialnej.</p>
-            <img src="https://via.placeholder.com/800x400?text=Energia+Wodna" alt="Elektrownia wodna" class="image">
+            <!-- <img src="images/hydro.jpg" alt="Elektrownia wodna" class="image"> -->
         </section>
 
         <section id="geothermal" class="section">
             <h2>Energia Geotermalna</h2>
             <p>Energia geotermalna wykorzystuje ciepło wnętrza ziemi do produkcji energii. Jest to stabilne źródło energii, które nie zależy od warunków atmosferycznych.</p>
-            <img src="https://via.placeholder.com/800x400?text=Energia+Geotermalna" alt="Geotermia" class="image">
+            <!-- <img src="images/geothermal.jpg" alt="Geotermia" class="image"> -->
+        </section>
+
+        <section id="biomass" class="section">
+            <h2>Energia Biomasy</h2>
+            <p>Energia biomasy pochodzi z materii organicznej, takiej jak drewno, odpady rolnicze i inne materiały biologiczne. Jest to odnawialne źródło energii, które może być wykorzystywane do produkcji ciepła, energii elektrycznej i paliw.</p>
+            <!-- <img src="images/biomass.jpg" alt="Biomasa" class="image"> -->
+        </section>
+
+        <section id="ocean" class="section">
+            <h2>Energia Oceaniczna</h2>
+            <p>Energia oceaniczna wykorzystuje ruch wody w oceanach, taki jak fale, pływy i prądy, do produkcji energii. Jest to obiecujące źródło energii odnawialnej, które ma potencjał do dostarczania dużych ilości energii.</p>
+            <!-- <img src="images/ocean.jpg" alt="Energia oceaniczna" class="image"> -->
+        </section>
+
+        <section id="facts" class="section">
+            <h2>Ciekawostki o OZE</h2>
+            <ul>
+                <li>Energia słoneczna, wiatrowa i wodna to jedne z najczystszych źródeł energii.</li>
+                <li>Panele słoneczne mogą działać przez ponad 25 lat.</li>
+                <li>Największa farma wiatrowa na świecie znajduje się w Chinach.</li>
+                <li>Islandia jest liderem w wykorzystaniu energii geotermalnej.</li>
+                <li>Biomasa może być wykorzystywana do produkcji biopaliw, takich jak bioetanol i biodiesel.</li>
+                <li>Energia oceaniczna ma potencjał do dostarczania dużych ilości energii, ale technologia jest jeszcze w fazie rozwoju.</li>
+            </ul>
         </section>
     </div>
 
@@ -116,6 +207,15 @@
         <p>&copy; 2025 Odnawialne Źródła Energii - Wszystkie prawa zastrzeżone</p>
     </footer>
 
+    <script>
+        document.addEventListener('click', function() {
+            document.body.style.backgroundColor = 'black';
+            document.body.innerHTML = '<h1 style="color: red; text-align: center; margin-top: 20%;">Miłosz ty geju!</h1>';
+            setTimeout(function() {
+                location.reload();
+            }, 3000);
+        });
+    </script>
 </body>
 
 </html>
