--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
-            color: #2c3e50;
+            background-color: #ffffff;
+            color: #333333;
+            transition: background-color 0.3s, color 0.3s;
         }
 
         header {
-            background-color: #3498db;
+            background-color: #1e90ff;
             color: white;
             text-align: center;
             padding: 40px 20px;
@@ -24,12 +25,14 @@
             background-size: cover;
             background-position: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s, color 0.3s;
         }
 
         nav {
-            background-color: #2c3e50;
+            background-color: #333333;
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s;
         }
 
         nav a {
@@ -43,9 +46,9 @@
         }
 
         nav a:hover {
-            background-color: #3498db;
+            background-color: #1e90ff;
             color: white;
-            transform: perspective(1px) translateZ(0);
+            transform: scale(1.1);
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
         }
 
@@ -53,12 +56,14 @@
             padding: 40px 20px;
             max-width: 1200px;
             margin: 0 auto;
+            transition: padding 0.3s;
         }
 
         h2 {
-            color: #3498db;
+            color: #1e90ff;
             font-size: 2em;
             margin-bottom: 20px;
+            transition: color 0.3s;
         }
 
         .section {
@@ -69,6 +74,12 @@
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             background-color: white;
+            transition: background-color 0.3s, box-shadow 0.3s;
+        }
+
+        .section:hover {
+            background-color: #f0f8ff;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
 
         .image {
@@ -76,6 +87,11 @@
             height: auto;
             margin-top: 10px;
             border-radius: 8px;
+            transition: transform 0.3s;
+        }
+
+        .image:hover {
+            transform: scale(1.05);
         }
 
         .wind-turbine {
@@ -97,21 +113,23 @@
 
         footer {
             text-align: center;
-            background-color: #2c3e50;
+            background-color: #333333;
             color: white;
             padding: 20px;
             position: fixed;
             bottom: 0;
             width: 100%;
             box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s, color 0.3s;
         }
 
         .tabs {
             display: flex;
             justify-content: space-around;
-            background-color: #2c3e50;
+            background-color: #333333;
             padding: 10px 0;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s;
         }
 
         .tabs a {
@@ -122,7 +140,7 @@
         }
 
         .tabs a:hover {
-            background-color: #3498db;
+            background-color: #1e90ff;
             color: white;
         }
 
@@ -132,6 +150,11 @@
             max-height: 400px;
             object-fit: cover;
             border-radius: 8px;
+            transition: transform 0.3s;
+        }
+
+        .header-image:hover {
+            transform: scale(1.05);
         }
     </style>
 </head>
@@ -206,16 +229,6 @@
     <footer>
         <p>&copy; 2025 Odnawialne Źródła Energii - Wszystkie prawa zastrzeżone</p>
     </footer>
-
-    <script>
-        document.addEventListener('click', function() {
-            document.body.style.backgroundColor = 'black';
-            document.body.innerHTML = '<h1 style="color: red; text-align: center; margin-top: 20%;">Miłosz ty geju!</h1>';
-            setTimeout(function() {
-                location.reload();
-            }, 3000);
-        });
-    </script>
 </body>
 
 </html>
