--- a/biomass.html
+++ b/biomass.html
@@ -112,6 +112,13 @@
             <p>Energia biomasy pochodzi z materii organicznej, takiej jak drewno, odpady rolnicze i inne materiały biologiczne. Jest to odnawialne źródło energii, które może być wykorzystywane do produkcji ciepła, energii elektrycznej i paliw.</p>
             <p>Biomasa może być spalana bezpośrednio w celu wytwarzania ciepła lub przekształcana w biopaliwa, takie jak bioetanol i biodiesel, które mogą być używane w pojazdach i generatorach.</p>
             <p>Energia biomasy jest zrównoważonym źródłem energii, które może pomóc w redukcji emisji gazów cieplarnianych i zmniejszeniu zależności od paliw kopalnych.</p>
+            <h3>Ciekawostki o Energii Biomasy</h3>
+            <ul>
+                <li>Biomasa stanowi około 10% globalnej produkcji energii.</li>
+                <li>Biomasa może być przekształcana w biogaz, który może być używany do produkcji energii elektrycznej i ciepła.</li>
+                <li>Energia biomasy może być wykorzystywana do produkcji biopaliw, takich jak bioetanol i biodiesel.</li>
+                <li>Biomasa może być wykorzystywana do produkcji energii w kogeneracji, co pozwala na jednoczesne wytwarzanie energii elektrycznej i ciepła.</li>
+            </ul>
         </section>
     </div>
 
