--- a/geothermal.html
+++ b/geothermal.html
@@ -21,7 +21,7 @@
             color: white;
             text-align: center;
             padding: 40px 20px;
-            background-image: url('images/Oze2.jpg');
+            /* background-image: url('images/Oze4.jpg'); */
             background-size: cover;
             background-position: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -112,6 +112,13 @@
             <p>Energia geotermalna wykorzystuje ciepło wnętrza ziemi do produkcji energii. Jest to stabilne źródło energii, które nie zależy od warunków atmosferycznych.</p>
             <p>Geotermalne elektrownie wykorzystują gorącą wodę i parę z wnętrza ziemi do napędzania turbin, które generują energię elektryczną. Ciepło geotermalne może być również wykorzystywane do ogrzewania budynków i wody.</p>
             <p>Energia geotermalna jest odnawialnym i niezawodnym źródłem energii, które może działać przez cały rok, niezależnie od warunków pogodowych.</p>
+            <h3>Ciekawostki o Energii Geotermalnej</h3>
+            <ul>
+                <li>Islandia jest liderem w wykorzystaniu energii geotermalnej, która stanowi około 25% produkcji energii elektrycznej w kraju.</li>
+                <li>Energia geotermalna może być wykorzystywana do produkcji wodoru, który jest czystym paliwem.</li>
+                <li>Geotermalne elektrownie mogą działać przez ponad 30 lat.</li>
+                <li>Energia geotermalna może być wykorzystywana do ogrzewania szklarni, co pozwala na uprawę roślin przez cały rok.</li>
+            </ul>
         </section>
     </div>
 
