--- a/hydro.html
+++ b/hydro.html
@@ -21,7 +21,7 @@
             color: white;
             text-align: center;
             padding: 40px 20px;
-            background-image: url('images/Oze2.jpg');
+            /* background-image: url('images/Oze4.jpg'); */
             background-size: cover;
             background-position: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -112,6 +112,13 @@
             <p>Energia wodna pochodzi z przepływających wód, które mogą napędzać turbiny w elektrowniach wodnych. Jest to jedno z najstarszych źródeł energii odnawialnej.</p>
             <p>Elektrownie wodne mogą być budowane na rzekach, jeziorach i innych zbiornikach wodnych. Wykorzystują one energię potencjalną wody, która jest zamieniana na energię mechaniczną, a następnie na energię elektryczną.</p>
             <p>Energia wodna jest niezawodnym i wydajnym źródłem energii, które może dostarczać energię na dużą skalę. Jest również przyjazna dla środowiska, ponieważ nie emituje gazów cieplarnianych.</p>
+            <h3>Ciekawostki o Energii Wodnej</h3>
+            <ul>
+                <li>Największa elektrownia wodna na świecie to Zapora Trzech Przełomów w Chinach, która ma moc 22,500 MW.</li>
+                <li>Energia wodna stanowi około 16% globalnej produkcji energii elektrycznej.</li>
+                <li>Elektrownie wodne mogą działać przez ponad 50 lat.</li>
+                <li>Energia wodna może być wykorzystywana do produkcji wodoru, który jest czystym paliwem.</li>
+            </ul>
         </section>
     </div>
 
