--- a/ocean.html
+++ b/ocean.html
@@ -21,7 +21,7 @@
             color: white;
             text-align: center;
             padding: 40px 20px;
-            background-image: url('images/Oze2.jpg');
+            /* background-image: url('images/Oze4.jpg'); */
             background-size: cover;
             background-position: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -112,6 +112,13 @@
             <p>Energia oceaniczna wykorzystuje ruch wody w oceanach, taki jak fale, pływy i prądy, do produkcji energii. Jest to obiecujące źródło energii odnawialnej, które ma potencjał do dostarczania dużych ilości energii.</p>
             <p>Technologie wykorzystywane do pozyskiwania energii oceanicznej obejmują turbiny pływowe, konwertery energii fal oraz systemy wykorzystujące różnice temperatur wody.</p>
             <p>Energia oceaniczna jest stabilnym i przewidywalnym źródłem energii, które może przyczynić się do zmniejszenia zależności od paliw kopalnych.</p>
+            <h3>Ciekawostki o Energii Oceanicznej</h3>
+            <ul>
+                <li>Energia oceaniczna może być wykorzystywana do odsalania wody morskiej, co jest ważne dla krajów z ograniczonym dostępem do wody pitnej.</li>
+                <li>Największa farma pływowa na świecie znajduje się w Szkocji i ma moc 6 MW.</li>
+                <li>Energia oceaniczna może być wykorzystywana do produkcji wodoru, który jest czystym paliwem.</li>
+                <li>Technologie energii oceanicznej są jeszcze w fazie rozwoju, ale mają duży potencjał do dostarczania energii na dużą skalę.</li>
+            </ul>
         </section>
     </div>
 
