--- a/solar.html
+++ b/solar.html
@@ -21,7 +21,7 @@
             color: white;
             text-align: center;
             padding: 40px 20px;
-            background-image: url('images/Oze2.jpg');
+            /* background-image: url('images/Oze4.jpg'); */
             background-size: cover;
             background-position: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -111,6 +111,15 @@
             <h2>Energia Słoneczna</h2>
             <p>Energia słoneczna jest jednym z najbardziej powszechnych i czystych źródeł energii. Dzięki panelom słonecznym możliwe jest pozyskiwanie energii bezpośrednio z promieniowania słonecznego.</p>
             <img src="images/Oze3.jpg" alt="Panele słoneczne" class="image">
+            <p>Panele słoneczne mogą być instalowane na dachach budynków, na ziemi lub na specjalnych konstrukcjach. Mogą one zasilać domy, firmy, a nawet całe miasta.</p>
+            <p>Energia słoneczna jest odnawialnym źródłem energii, które nie emituje gazów cieplarnianych. Jest to jedno z najszybciej rozwijających się źródeł energii odnawialnej na świecie.</p>
+            <h3>Ciekawostki o Energii Słonecznej</h3>
+            <ul>
+                <li>Największa farma słoneczna na świecie znajduje się w Indiach i ma moc 2,245 MW.</li>
+                <li>Panele słoneczne mogą działać nawet w pochmurne dni, chociaż ich wydajność jest wtedy niższa.</li>
+                <li>Energia słoneczna może być wykorzystywana do zasilania pojazdów elektrycznych.</li>
+                <li>W 2020 roku energia słoneczna stanowiła około 3% globalnej produkcji energii elektrycznej.</li>
+            </ul>
         </section>
     </div>
 
