--- a/wind.html
+++ b/wind.html
@@ -21,7 +21,7 @@
             color: white;
             text-align: center;
             padding: 40px 20px;
-            background-image: url('images/Oze2.jpg');
+            /* background-image: url('images/Oze4.jpg'); */
             background-size: cover;
             background-position: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -130,6 +130,13 @@
             <div class="wind-turbine"></div>
             <p>Turbiny wiatrowe przekształcają energię kinetyczną wiatru w energię mechaniczną, która następnie jest zamieniana na energię elektryczną. Są one instalowane zarówno na lądzie, jak i na morzu.</p>
             <p>Energia wiatrowa jest czysta i nie emituje gazów cieplarnianych. Jest to jedno z najszybciej rozwijających się źródeł energii odnawialnej na świecie.</p>
+            <h3>Ciekawostki o Energii Wiatrowej</h3>
+            <ul>
+                <li>Największa farma wiatrowa na świecie znajduje się w Chinach i ma moc 7,965 MW.</li>
+                <li>W 2020 roku energia wiatrowa stanowiła około 6% globalnej produkcji energii elektrycznej.</li>
+                <li>Turbiny wiatrowe mogą działać przez ponad 20 lat.</li>
+                <li>Energia wiatrowa może być wykorzystywana do zasilania pojazdów elektrycznych.</li>
+            </ul>
         </section>
     </div>
 
